# skypilot-iceberg

./: .cursorrules  .gitignore  .localenv  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: catalog-refresh.yml
.streamlit/: secrets.toml
analytics/: app.py  utils.py  utlis.py
ddls/: checkpoint_ddls.sql
gpu-catalog/: .gitignore
gpu-catalog/.evidence/customization/: .profile.json
gpu-catalog/pages/: clouds.md  dashboard.md  index.md
gpu-catalog/sources/needful_things/: connection.yaml  vms.sql
gpu-catalog/src/components/: layout.svelte
scripts/: 1_reconstruct_git_files.py  2_convert_to_iceberg.py  3_update_silver.py  ddl.py  main.py
scripts/lib/: iceberg_helpers.py  supabase_client.py
